# CyaniTalk

./: .gitignore  .metadata  CHANGELOG.md  CODE_OF_CONDUCT.md  CyaniTalk.aip  LICENSE  README.md  README_CN.md  analysis_options.yaml  analysis_report.txt  flutter_rust_bridge.yaml  project_analysis_report.md  pubspec.yaml  test_slider.dart
.agent/rules/: flutter-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dev-build.yml  nightly-build.yml  prerelease-build.yml  release-build.yml
android/app/: build.gradle.kts
assets/: ATTRIBUTIONS.txt
assets/OAuth-SDK/: Oauth.class.php  Oauth.config.php  connect.php
assets/translations/: en-Miao.json  en-US.json  ja-JP.json  ja-Miao.json  miao-Miao.json  zh-CN.json  zh-Miao.json
docs/: ARCHITECTURE.md  CODE_OPTIMIZATION.md  OPTIMIZATION_GUIDE.md
docs/ui/: UserPageDesign.md  ui-ux-audit-findings.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  oss_licenses.dart
lib/aiscripts/: hello.aiscript  miku.aiscript
lib/src/: app.dart
lib/src/core/: core.dart
lib/src/routing/: router.dart  (+1 more)
linux/: CMakeLists.txt
linux/flutter/: dart_defines.h
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: auth.rs  flarum.rs  misskey.rs  mod.rs  streaming.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
(+325 files in other folders)
