[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1" # Match dart version
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
